Fix layout issue when using FieldRowPanel with a heading
Resolves #5691

--- a/wagtail/admin/static_src/wagtailadmin/scss/layouts/page-editor.scss
+++ b/wagtail/admin/static_src/wagtailadmin/scss/layouts/page-editor.scss
@@ -63,6 +63,10 @@ $object-title-height: 40px;
         padding-right: 0;
     }
 
+    .field-row {
+        padding-top: $object-title-height + 12px;
+    }
+
     .object-help {
         display: block;
         position: relative;
